chore: split into modules
feat: handle signals

build: change Makefile

--- a/shuvalov/31/Makefile
+++ b/shuvalov/31/Makefile
@@ -1,18 +1,21 @@
 .PHONY: all
 
-all: main proxy client
+all: proxy client
 
-main: main.c
-	gcc -Werror -Wpedantic -Wall main.c -o main
+proxy: cache.o hashmap.o http_socket.o picohttpparser.o socket_operations.o proxy.c
+	gcc -Werror -Wpedantic -Wall cache.o hashmap.o http_socket.o picohttpparser.o socket_operations.o proxy.c -o proxy
 
-proxy: picohttpparser.o socket_operations.o hashmap.o proxy.c
-	gcc -Werror -Wpedantic -Wall picohttpparser.o socket_operations.o hashmap.o proxy.c -o proxy
+http_socket.o: picohttpparser.o http_socket/http_socket.c
+	gcc -Werror -Wpedantic -Wall picohttpparser.o http_socket/http_socket.c -c
 
-picohttpparser.o: picohttpparser/picohttpparser.c
-	gcc -Werror -Wpedantic -Wall picohttpparser/picohttpparser.c -c
+cache.o: picohttpparser.o hashmap.o http_socket/cache.c
+	gcc -Werror -Wpedantic -Wall picohttpparser.o hashmap.o http_socket/cache.c -c
 
-hashmap.o: hashmap/hashmap.c
-	gcc -Werror -Wpedantic -Wall hashmap/hashmap.c -c
+picohttpparser.o: http_socket/picohttpparser/picohttpparser.c
+	gcc -Werror -Wpedantic -Wall http_socket/picohttpparser/picohttpparser.c -c
+
+hashmap.o: http_socket/hashmap/hashmap.c
+	gcc -Werror -Wpedantic -Wall http_socket/hashmap/hashmap.c -c
 
 socket_operations.o: socket_operations/socket_operations.c
 	gcc -Werror -Wpedantic -Wall socket_operations/socket_operations.c -c
