fix: two clients of one server read from one cache page simultaneously now
chore: make cache abstraction

chore: remove comments

--- a/shuvalov/31/Makefile
+++ b/shuvalov/31/Makefile
@@ -1,15 +1,18 @@
-.PHONY: all
+.PHONY: all clean
 
 all: proxy client
+
+clean:
+	rm ./*.o
 
 proxy: cache.o hashmap.o http_socket.o picohttpparser.o socket_operations.o proxy.c
 	gcc -Werror -Wpedantic -Wall cache.o hashmap.o http_socket.o picohttpparser.o socket_operations.o proxy.c -o proxy
 
-http_socket.o: picohttpparser.o http_socket/http_socket.c
-	gcc -Werror -Wpedantic -Wall picohttpparser.o http_socket/http_socket.c -c
+http_socket.o: http_socket/http_socket.c
+	gcc -Werror -Wpedantic -Wall http_socket/http_socket.c -c
 
-cache.o: picohttpparser.o hashmap.o http_socket/cache.c
-	gcc -Werror -Wpedantic -Wall picohttpparser.o hashmap.o http_socket/cache.c -c
+cache.o: http_socket/cache.c
+	gcc -Werror -Wpedantic -Wall http_socket/cache.c -c
 
 picohttpparser.o: http_socket/picohttpparser/picohttpparser.c
 	gcc -Werror -Wpedantic -Wall http_socket/picohttpparser/picohttpparser.c -c
