[ + ] Сервер делает тот запрос который его попросили а не формирует свой [ + ] Убрал 1 shutdown [ + ] Добавил еще обработок ошибок [ * ] Компилируем при помощи clang

--- a/arkhipov/32/Makefile
+++ b/arkhipov/32/Makefile
@@ -1,8 +1,8 @@
 all: server client
 
 server: server.c cache.c cache.h
-	gcc server.c cache.c -Wall -o server
+	clang server.c cache.c -Wall -o server
 client: client.c
-	gcc client.c -Wall -o client
+	clang client.c -Wall -o client
 clean:
 	rm -f server client
